--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "projet_3",
+  "name": "ohmyfood",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-"sass":"sass --watch ./sass/main.scss: ./css/style.css"
+"sass":"sass --watch ./sass/main.scss:./css/style.css"
   },
   "author": "",
   "license": "ISC"
